// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initProject should fail with access problems 1`] = `
{
  "ensureDirCalls": [
    [
      "/home/whoiam/projects/yolo",
    ],
  ],
  "errorCode": "E_PROJECT_DIR",
  "errorParams": [
    "/home/whoiam/projects/yolo",
  ],
  "inquirerPromptCalls": [
    [
      [
        {
          "default": "new-whook-project",
          "message": "What's this new project name",
          "name": "projectName",
          "type": "input",
        },
      ],
    ],
    [
      [
        {
          "default": "/home/whoiam/projects/super-project",
          "message": "Provide the project's directory",
          "name": "projectDirectory",
          "type": "input",
        },
      ],
    ],
  ],
  "lockReleaseCalls": [
    [
      "cli:input",
    ],
    [
      "cli:input",
    ],
  ],
  "lockTakeCalls": [
    [
      "cli:input",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🏁 - Initializing project...",
    ],
    [
      "error",
      "Cannot create the project's directory: "/home/whoiam/projects/yolo"",
    ],
  ],
}
`;

exports[`initProject should work 1`] = `
{
  "ensureDirCalls": [
    [
      "/home/whoiam/projects/yolo",
    ],
  ],
  "inquirerPromptCalls": [
    [
      [
        {
          "default": "new-whook-project",
          "message": "What's this new project name",
          "name": "projectName",
          "type": "input",
        },
      ],
    ],
    [
      [
        {
          "default": "/home/whoiam/projects/super-project",
          "message": "Provide the project's directory",
          "name": "projectDirectory",
          "type": "input",
        },
      ],
    ],
  ],
  "lockReleaseCalls": [
    [
      "cli:input",
    ],
  ],
  "lockTakeCalls": [
    [
      "cli:input",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🏁 - Initializing project...",
    ],
  ],
  "project": {
    "directory": "/home/whoiam/projects/yolo",
    "name": "super-project",
  },
}
`;
